# meta

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  Makefile  README.md  build.rs  spec.md
.ci/: mknotes  test-cover
.github/workflows/: build-and-release.yml  cargo-publish.yml  test-and-lint.yml
corpus/: invalid.json
corpus/v1/: howto2.json  widget.json
corpus/v2/: custom-fields.json  minimal.json  pg_partman.json  postgresml.json  typical-c.json  typical-pgrx.json  typical-sql.json
schema/v1/: api-extras.schema.json  base.schema.json  bugtracker.schema.json  distribution.schema.json  docs.schema.json  extension.schema.json  license.schema.json  maintainer.schema.json  meta-spec.schema.json  no_index.schema.json  path.schema.json  prereq_phase.schema.json  prereq_relationship.schema.json  prereqs.schema.json  provides.schema.json  release.schema.json  releases.schema.json  repository.schema.json  resources.schema.json  special_files.schema.json  tags.schema.json  term.schema.json  version.schema.json  version_range.schema.json
schema/v2/: app.schema.json  artifacts.schema.json  badges.schema.json  base.schema.json  categories.schema.json  certs.schema.json  classifications.schema.json  contents.schema.json  dependencies.schema.json  digests.schema.json  distribution.schema.json  extension.schema.json  glob.schema.json  ignore.schema.json  jwk.schema.json  jws-header.schema.json  jws.schema.json  license.schema.json  maintainers.schema.json  meta-spec.schema.json  module.schema.json  packages.schema.json  path.schema.json  payload.schema.json  pgxn-jws.schema.json  phase.schema.json  pipeline.schema.json  platform.schema.json  platforms.schema.json  postgres.schema.json  purl.schema.json  release.schema.json  resources.schema.json  semver.schema.json  tags.schema.json  term.schema.json  variations.schema.json  version_range.schema.json
src/: lib.rs  main.rs  tests.rs
src/compiler/: mod.rs
src/error/: mod.rs  tests.rs
src/meta/: mod.rs  tests.rs
src/meta/v1/: mod.rs  tests.rs
src/meta/v2/: mod.rs
src/release/: mod.rs  tests.rs
src/release/v1/: mod.rs  tests.rs
src/release/v2/: mod.rs
src/tests/: common.rs  mod.rs  v1.rs  v2.rs
src/util/: mod.rs
src/valid/: mod.rs  tests.rs
src/valid/compiler/: mod.rs  tests.rs
tests/: test.rs  v1_schema_test.rs  v2_schema_test.rs
tests/common/: mod.rs
tests/corpus/v1/: howto.json  invalid.txt  valid.txt  widget.json
tests/corpus/v2/: postgresml.json  typical-pgrx.json  typical-sql.json
