[package]
name = "pgxn_meta"
version = "0.5.0"
description = "The PGXN distribution metadata specification"
repository = "https://github.com/pgxn/meta"
documentation = "https://docs.rs/pgxn_meta/"
authors = ["David E. Wheeler <david@justatheory.com>"]
readme = "README.md"
keywords = ["pgxn", "postgres", "postgresql", "extension", "validation"]
license = "PostgreSQL"
categories = ["web-programming", "database"]
edition = "2021"
exclude = [ ".github", ".vscode", ".gitignore", ".ci", ".pre-*.yaml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22"
boon = "0.6"
chrono = { version = "0.4.38", features = ["serde"] }
constant_time_eq = "0.3"
digest = "0.10"
email_address = "0.2.9"
hex = "0.4"
json-patch = "3.0"
lexopt = "0.3.0"
rand = "0.8.5"
relative-path = { version = "1.9", features = ["serde"] }
semver = { version = "1.0", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.9.0", features = ["hex"] }
sha1 = "0.10"
sha2 = "0.10"
spdx = "0.10.6"
thiserror = "1.0"
wax = "0.6.0"

[build-dependencies]
wax = "0.6.0"
serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "2.0.2"
tempfile = "3.12.0"
